--- a/mainpage.html
+++ b/mainpage.html
@@ -36,6 +36,6 @@
             <button id ="contact" type="button" class="btn btn-success">Contact</button>
         </div>
     </div>
-    <script src="./index.js"></script>
+    <script src="./mainpage.js"></script>
 </body>
 </html>
