--- a/mainpage.html
+++ b/mainpage.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div id = "text_1">Welcome</div>
         <div id = "text_1">To</div>
-        <div id = "text_1">FoodieGoodie</div>
+        <div id = "text_1">HuIndex</div>
     </div>
     <!-- <div id="navi"></div> -->
 
